ability to buy on sale items

--- a/public/index.html
+++ b/public/index.html
@@ -74,6 +74,10 @@
           window.open(e.target.dataset.link, '_blank')
         }
       }, false)
+
+      window.weareonit = function weareonit() {
+        alert("We are on it! The project is still work-in-progress. Soon you'll be able to use it! Please follow us on Twitter or join the Discord channel to say hi!")
+      }
     </script>
     <!--
       This HTML file is a template.
