see full poge on mobile

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="user-scalable = no">
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -41,7 +41,7 @@
           return check;
         };
       if (mobileAndTabletCheck()) {
-        alert("You'll enjoy this website more on a bigger screen");
+        // alert("You'll enjoy this website more on a bigger screen");
       }
       const tooltip = document.getElementById('tooltip');
       document.addEventListener('mouseover', (e) => {
